# open-translate

./: Dockerfile  LANGUAGES.md  README.md  pyproject.toml  requirements.txt  server.py  start.sh
.github/workflows/: docker-publish.yml
